--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NTS Technologies Ltd.</title>
+  <title>ntsindia placement portal.</title>
 </head>
 <body>
   <iframe 
