--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <iframe 
-    src="https://script.google.com/a/~/macros/s/AKfycbw4dFiAM88SshJMmiWQTHHd6iBf0L6_XQkJYR9_cZWAcc9ufWLo2ertcydUZjCO6LFlTg/exec"
+    src="https://script.google.com/macros/s/AKfycbzYT2w3w8P-Ly_ruxl8ZTi-AMeNQtEIDzHGmpob6dsSL6OzPKXDWJqegp-mFMJYAmy8Eg/exec"
     width="100%"
     height="100%"
     allowfullscreen="true"
